# webpreviewapi

./: .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: depley.yaml
account/: admin.py  api.py  apps.py  decorators.py  models.py  schemas.py
account/migrations/: 0001_initial.py  0002_alter_profile_total_score.py  0002_user_role.py  0003_user_classname.py  0003_user_raw_password.py  0004_alter_user_raw_password_alter_user_role.py  0004_remove_profile.py  0005_alter_user_raw_password.py  0006_alter_user_options.py  0007_alter_user_options.py
api/: asgi.py  settings.py  urls.py
prompt/: admin.py  api.py  apps.py  consumers.py  llm.py  models.py  schemas.py  tests.py  url.py  utils.py
prompt/migrations/: 0001_initial.py  0002_message_prompt_level.py  0003_add_message_source.py  0004_update_message_source_default.py  0005_message_add_submission_fk.py  0006_message_submission_cascade_delete.py
submission/: admin.py  api.py  classifier.py  gradebook.py  models.py  schemas.py  tests.py  tests_showcase.py
submission/migrations/: 0001_initial.py  0002_alter_submission_css_alter_submission_html_and_more.py  0002_remove_submission_referee_alter_submission_score_and_more.py  0003_submission_conversation.py  0003_submission_referee_alter_submission_user.py  0004_alter_submission_id.py  0004_submission_flag.py  0005_add_flag_index.py  0008_add_zone.py  (+9 more)
task/: admin.py  apps.py  assets.py  challenge.py  models.py  schemas.py  tutorial.py
tutorial/: api.py  apps.py  models.py  schemas.py
utils/: upload.py
(+16 files in other folders)
