[project]
name = "webapi"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-extensions>=3.2.3",
    "django-ninja>=1.3.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.5",
    "pydantic[email]>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
    "django-redis>=5.4.0",
    "redis>=5.0.1",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.2.1",
]
